--- a/9Zivota.inform/Index/Actions.html
+++ b/9Zivota.inform/Index/Actions.html
@@ -1204,7 +1204,9 @@
         <p><b>Standard actions which always do nothing unless rules intervene</b><br>saying yes&nbsp;<a href=Details/42_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, saying no&nbsp;<a href=Details/43_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, burning&nbsp;<a href=Details/44_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, waking up&nbsp;<a href=Details/45_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, thinking&nbsp;<a href=Details/46_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, smelling&nbsp;<a href=Details/47_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, listening to&nbsp;<a href=Details/48_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, tasting&nbsp;<a href=Details/49_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, cutting&nbsp;<a href=Details/50_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, jumping&nbsp;<a href=Details/51_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, tying it to&nbsp;<a href=Details/52_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, drinking&nbsp;<a href=Details/53_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, saying sorry&nbsp;<a href=Details/54_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, swinging&nbsp;<a href=Details/55_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, rubbing&nbsp;<a href=Details/56_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, setting it to&nbsp;<a href=Details/57_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, waving hands&nbsp;<a href=Details/58_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, buying&nbsp;<a href=Details/59_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, climbing&nbsp;<a href=Details/60_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, sleeping&nbsp;<a href=Details/61_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></p>
         <p><b>Standard actions which happen out of world</b><br><span class="indexdullred">quitting the game</span>&nbsp;<a href=Details/62_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">saving the game</span>&nbsp;<a href=Details/63_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">restoring the game</span>&nbsp;<a href=Details/64_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">restarting the game</span>&nbsp;<a href=Details/65_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">verifying the story file</span>&nbsp;<a href=Details/66_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">switching the story transcript on</span>&nbsp;<a href=Details/67_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">switching the story transcript off</span>&nbsp;<a href=Details/68_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">requesting the story file version</span>&nbsp;<a href=Details/69_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">requesting the score</span>&nbsp;<a href=Details/70_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">preferring abbreviated room descriptions</span>&nbsp;<a href=Details/71_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">preferring unabbreviated room descriptions</span>&nbsp;<a href=Details/72_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">preferring sometimes abbreviated room descriptions</span>&nbsp;<a href=Details/73_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">switching score notification on</span>&nbsp;<a href=Details/74_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">switching score notification off</span>&nbsp;<a href=Details/75_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <span class="indexdullred">requesting the pronoun meanings</span>&nbsp;<a href=Details/76_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></p>
         <p><b>Defined in the source</b></p>
-        <p><b>Map</b><br>map&nbsp;<a href="source:story.ni#line392"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;<a href=Details/77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></p>
+        <p><b>Map</b><br>map&nbsp;<a href="source:story.ni#line381"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;<a href=Details/77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></p>
+        <p><b>Entrance hall</b><br>flip&nbsp;<a href="source:story.ni#line456"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;<a href=Details/78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></p>
+        <p><b>Chapter 15</b><br>nahrani&nbsp;<a href="source:story.ni#line536"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;<a href=Details/79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, pojedi&nbsp;<a href="source:story.ni#line547"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;<a href=Details/80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, casting eugen&nbsp;<a href="source:story.ni#line600"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;<a href=Details/81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, casting mijau&nbsp;<a href="source:story.ni#line609"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;<a href=Details/82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></p>
     </div>
     <div id="segment2">
         <hr>
@@ -1300,6 +1302,28 @@
                 </td>
                 <td align="left" valign="top">
                     <i>touchable</i> <b>object</b>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    &mdash;
+                </td>
+            </tr>
+            <tr>
+                <td align="left" valign="top">
+                    casting eugen&nbsp;<a href=Details/81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    &mdash;&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    &mdash;
+                </td>
+            </tr>
+            <tr>
+                <td align="left" valign="top">
+                    casting mijau&nbsp;<a href=Details/82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    &mdash;&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td align="left" valign="top">
                     &mdash;
@@ -1410,6 +1434,17 @@
                 </td>
                 <td align="left" valign="top">
                     &mdash;&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    &mdash;
+                </td>
+            </tr>
+            <tr>
+                <td align="left" valign="top">
+                    flip&nbsp;<a href=Details/78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    <b>object</b>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td align="left" valign="top">
                     &mdash;
@@ -1538,10 +1573,32 @@
             </tr>
             <tr>
                 <td align="left" valign="top">
+                    nahrani&nbsp;<a href=Details/79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    <b>object</b>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    &mdash;
+                </td>
+            </tr>
+            <tr>
+                <td align="left" valign="top">
                     opening&nbsp;<a href=Details/20_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td align="left" valign="top">
                     <i>touchable</i> <b>object</b>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    &mdash;
+                </td>
+            </tr>
+            <tr>
+                <td align="left" valign="top">
+                    pojedi&nbsp;<a href=Details/80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    <b>object</b>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td align="left" valign="top">
                     &mdash;
@@ -2146,6 +2203,7 @@
         &quot;[direction]&quot; - <i>going</i><br>
         <br>
         &quot;adjust&quot;, <i>same as</i> &quot;set&quot;<br>
+        <a name=answer></a>&quot;answer Eugen&quot;&nbsp;<a href="source:story.ni#line599"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting eugen</i>&nbsp;<a href=Details/81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <a name=answer></a>&quot;answer [text] to [someone]&quot; - <i>answering it that</i>&nbsp;<a href=Details/30_A.html><img border=0 src=inform:/doc_images/Beneath.png></a> <i>reversed</i><br>
         <a name=ask></a>&quot;ask [someone] for [something]&quot; - <i>asking it for</i>&nbsp;<a href=Details/33_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <a name=ask></a>&quot;ask [someone] about [text]&quot; - <i>asking it about</i>&nbsp;<a href=Details/32_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
@@ -2175,6 +2233,7 @@
         &quot;cross&quot;, <i>same as</i> &quot;enter&quot;<br>
         <a name=cut></a>&quot;cut [something]&quot; - <i>cutting</i>&nbsp;<a href=Details/50_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <br>
+        <a name=daj></a>&quot;daj [someone] kost&quot;&nbsp;<a href="source:story.ni#line537"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>nahrani</i>&nbsp;<a href=Details/79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         &quot;describe&quot;, <i>same as</i> &quot;examine&quot;<br>
         &quot;destroy&quot;, <i>same as</i> &quot;attack&quot;<br>
         &quot;discard&quot;, <i>same as</i> &quot;drop&quot;<br>
@@ -2194,6 +2253,7 @@
         &quot;embrace&quot;, <i>same as</i> &quot;kiss&quot;<br>
         <a name=enter></a>&quot;enter&quot; - <i>entering</i>&nbsp;<a href=Details/8_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <a name=enter></a>&quot;enter [something]&quot; - <i>entering</i>&nbsp;<a href=Details/8_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+        <a name=eugen></a>&quot;eugen&quot;&nbsp;<a href="source:story.ni#line599"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting eugen</i>&nbsp;<a href=Details/81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <a name=examine></a>&quot;examine [something]&quot; - <i>examining</i>&nbsp;<a href=Details/12_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <a name=exit></a>&quot;exit&quot; - <i>exiting</i>&nbsp;<a href=Details/9_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <br>
@@ -2201,6 +2261,7 @@
         &quot;feed&quot;, <i>same as</i> &quot;give&quot;<br>
         &quot;feel&quot;, <i>same as</i> &quot;touch&quot;<br>
         &quot;fight&quot;, <i>same as</i> &quot;attack&quot;<br>
+        <a name=flip></a>&quot;flip [something]&quot;&nbsp;<a href="source:story.ni#line457"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>flip</i>&nbsp;<a href=Details/78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <br>
         <a name=get></a>&quot;get out/off/down/up&quot; - <i>exiting</i>&nbsp;<a href=Details/9_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <a name=get></a>&quot;get in/on&quot; - <i>entering</i>&nbsp;<a href=Details/8_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
@@ -2245,7 +2306,9 @@
         <a name=look></a>&quot;look under [something]&quot; - <i>looking under</i>&nbsp;<a href=Details/13_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <a name=look></a>&quot;look up [text] in [something]&quot; - <i>consulting it about</i>&nbsp;<a href=Details/15_A.html><img border=0 src=inform:/doc_images/Beneath.png></a> <i>reversed</i><br>
         <br>
-        <a name=map></a>&quot;map&quot;&nbsp;<a href="source:story.ni#line392"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>map</i>&nbsp;<a href=Details/77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+        <a name=map></a>&quot;map&quot;&nbsp;<a href="source:story.ni#line381"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>map</i>&nbsp;<a href=Details/77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+        <a name=mijau></a>&quot;mijau&quot;&nbsp;<a href="source:story.ni#line608"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting mijau</i>&nbsp;<a href=Details/82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+        <a name=mijau></a>&quot;mijau&quot;&nbsp;<a href="source:story.ni#line608"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting mijau</i>&nbsp;<a href=Details/82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         &quot;move&quot;, <i>same as</i> &quot;push&quot;<br>
         &quot;murder&quot;, <i>same as</i> &quot;attack&quot;<br>
         <br>
@@ -2265,6 +2328,7 @@
         &quot;pay&quot;, <i>same as</i> &quot;give&quot;<br>
         <a name=pick></a>&quot;pick up [things]&quot; - <i>taking</i>&nbsp;<a href=Details/1_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <a name=pick></a>&quot;pick [things] up&quot; - <i>taking</i>&nbsp;<a href=Details/1_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+        <a name=pojedi></a>&quot;pojedi [something]&quot;&nbsp;<a href="source:story.ni#line548"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>pojedi</i>&nbsp;<a href=Details/80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         &quot;polish&quot;, <i>same as</i> &quot;rub&quot;<br>
         &quot;present&quot;, <i>same as</i> &quot;show&quot;<br>
         &quot;press&quot;, <i>same as</i> &quot;push&quot;<br>
@@ -2363,10 +2427,13 @@
         <a name=transcript></a><span class="indexdullred">&quot;transcript on&quot; - <i>switching the story transcript on</i>&nbsp;<a href=Details/67_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></span><br>
         <a name=transcript></a><span class="indexdullred">&quot;transcript off&quot; - <i>switching the story transcript off</i>&nbsp;<a href=Details/68_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></span><br>
         <a name=turn></a>&quot;turn [something]&quot; - <i>turning</i>&nbsp;<a href=Details/39_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+        <a name=turn></a>&quot;turn [something]&quot;&nbsp;<a href="source:story.ni#line459"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>flip</i>&nbsp;<a href=Details/78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <a name=turn></a>&quot;turn [something] on&quot; - <i>switching on</i>&nbsp;<a href=Details/18_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <a name=turn></a>&quot;turn on [something]&quot; - <i>switching on</i>&nbsp;<a href=Details/18_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <a name=turn></a>&quot;turn [something] off&quot; - <i>switching off</i>&nbsp;<a href=Details/19_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         <a name=turn></a>&quot;turn off [something]&quot; - <i>switching off</i>&nbsp;<a href=Details/19_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+        <a name=turn></a>&quot;turn over [something]&quot;&nbsp;<a href="source:story.ni#line458"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>flip</i>&nbsp;<a href=Details/78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+        <a name=turn></a>&quot;turn [something] over&quot;&nbsp;<a href="source:story.ni#line460"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>flip</i>&nbsp;<a href=Details/78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
         &quot;twist&quot;, <i>same as</i> &quot;turn&quot;<br>
         <br>
         &quot;uncover&quot;, <i>same as</i> &quot;open&quot;<br>
