--- a/9Zivota.inform/Index/Contents.html
+++ b/9Zivota.inform/Index/Contents.html
@@ -1199,36 +1199,45 @@
         <ul class="leaders">
         <li class="leaded indent1"><span>Preamble</span><span>35 words</span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 1 - Game setup</span><span>91 words&nbsp;<a href="source:story.ni#line3"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 1 - Game setup</span><span>115 words&nbsp;<a href="source:story.ni#line3"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 2 - Rooms</span><span>129 words&nbsp;<a href="source:story.ni#line33"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>Garage, Hallway, Storeroom, Entrance hall, Kitchen</i></span></p>
+        <li class="leaded indent1"><span>Chapter 2 - Rooms</span><span>211 words&nbsp;<a href="source:story.ni#line41"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>Garage, Hallway, Storeroom, Entrance hall, Kitchen, Living room, Library, Basement, Dining room, Attic, Pantry, Study, Bathroom, Garden, Bedroom</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 3 - Doors</span><span>95 words&nbsp;<a href="source:story.ni#line65"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>spike pit, red door, Living room, Pantry, red key, rotating blades, Office, Bathroom</i></span></p>
+        <li class="leaded indent1"><span>Chapter 3 - Doors</span><span>28 words&nbsp;<a href="source:story.ni#line77"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>spike pit</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 4 - Items</span><span>61 words&nbsp;<a href="source:story.ni#line93"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>rope, bone, chest, coin</i></span></p>
+        <li class="leaded indent1"><span>Chapter 4 - Items</span><span>66 words&nbsp;<a href="source:story.ni#line83"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>chest, coin, rope, Brown key, secret drawer, Note, desk in the Entrance hall</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 5 - Dying</span><span>161 words&nbsp;<a href="source:story.ni#line110"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 5 - Dying</span><span>161 words&nbsp;<a href="source:story.ni#line99"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 6 - Inventory</span><span>86 words&nbsp;<a href="source:story.ni#line138"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 6 - Inventory</span><span>86 words&nbsp;<a href="source:story.ni#line127"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 7 - Title screen</span><span>65 words&nbsp;<a href="source:story.ni#line154"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 7 - Title screen</span><span>65 words&nbsp;<a href="source:story.ni#line143"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 8 - Player's name</span><span>195 words&nbsp;<a href="source:story.ni#line169"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 8 - Player's name</span><span>195 words&nbsp;<a href="source:story.ni#line158"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 9 - Miscellanous</span><span>4 words&nbsp;<a href="source:story.ni#line201"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 9 - Miscellanous</span><span>4 words&nbsp;<a href="source:story.ni#line190"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 10 - Tutorial</span><span>405 words&nbsp;<a href="source:story.ni#line203"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 10 - Tutorial</span><span>405 words&nbsp;<a href="source:story.ni#line192"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>knife</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 11 - Difficulty</span><span>349 words&nbsp;<a href="source:story.ni#line301"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 11 - Difficulty</span><span>349 words&nbsp;<a href="source:story.ni#line290"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>Difficulty, normal, hard, unforgiving, unknown</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 12 - Status line</span><span>56 words&nbsp;<a href="source:story.ni#line373"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 12 - Status line</span><span>56 words&nbsp;<a href="source:story.ni#line362"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 13 - Map</span><span>76 words&nbsp;<a href="source:story.ni#line382"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 13 - Map</span><span>76 words&nbsp;<a href="source:story.ni#line371"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 14 - Entrance hall</span><span>417 words&nbsp;<a href="source:story.ni#line396"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>red drawer, blue drawer, green drawer, pink drawer</i></span></p>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 15</span><span>860 words&nbsp;<a href="source:story.ni#line466"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>Rotirajuce ostrice, Konopac, Frizider, Kost, Ormaric, Bocica, Zlatna skrinja, Zlatni kljuc, Zlatnici, Crna skrinja, Crni kljuc, Stvorenje, Boris</i></span></p>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 16 - Buying</span><span>684 words&nbsp;<a href="source:story.ni#line627"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>Blagajna, Blagajna condition, Crnk, Ok, Ck, Ko, Og, prazna, Oklop, Crveni kljuc, Kobasica, Ogrlica</i></span></p>
         <p>EXTENSIONS</p>
         <p class="hangingin2"><span class="indexgrey">Included from the source text</span></p>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Notifications &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Notifications.html' title="Vorple Notifications by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1058 words&nbsp;<a href="source:story.ni#line5"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
@@ -1366,7 +1375,41 @@
             </tr>
         </table>
 
-        <p><a href="#" onclick="showExtra('extra2', 'plus2'); return false;"><img border=0 id="plus2" src=inform:/doc_images/extra.png></a>&nbsp;Show tables inside extensions (there are none in the main text)</p>
+        <table border="0" cellspacing="0" cellpadding="0">
+            <tr>
+                <td style="padding-top: 3px;" align="left" valign="top">
+                    <b>Table of Boris Responses</b>&nbsp;<a href="source:story.ni#line618"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td style="padding-top: 3px;" align="left" valign="top">
+                    <i><span class="smaller">3 columns x 2 rows</span></i>
+                </td>
+            </tr>
+            <tr>
+                <td align="left" valign="top">
+                    &nbsp;&nbsp;col 1:&nbsp;&nbsp;topic&nbsp;<a href="javascript:pasteCode('topic entry')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    of topics
+                </td>
+            </tr>
+            <tr>
+                <td align="left" valign="top">
+                    &nbsp;&nbsp;col 2:&nbsp;&nbsp;Response&nbsp;<a href="javascript:pasteCode('Response entry')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    of texts
+                </td>
+            </tr>
+            <tr>
+                <td align="left" valign="top">
+                    &nbsp;&nbsp;col 3:&nbsp;&nbsp;Index&nbsp;<a href="javascript:pasteCode('Index entry')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    of texts
+                </td>
+            </tr>
+        </table>
+        <p><a href="#" onclick="showExtra('extra2', 'plus2'); return false;"><img border=0 id="plus2" src=inform:/doc_images/extra.png></a>&nbsp;Show tables inside extensions too</p>
         <div id="extra2" style="display: none;">
             <p class="in1"><table width="100%" cellpadding="6" cellspacing="0" border="0" class="indexmorebox">
                 <tr>
@@ -1471,7 +1514,7 @@
                                     <b>Table of Locale Priorities</b>&nbsp;&nbsp;&nbsp;&nbsp;
                                 </td>
                                 <td style="padding-top: 3px;" align="left" valign="top">
-                                    <i><span class="smaller">2 columns x 11 rows (10 blank, one for each thing)</span></i>
+                                    <i><span class="smaller">2 columns x 33 rows (32 blank, one for each thing)</span></i>
                                 </td>
                             </tr>
                             <tr>
