--- a/9Zivota.inform/Index/Details/62_A.html
+++ b/9Zivota.inform/Index/Details/62_A.html
@@ -894,7 +894,8 @@
     <span class="indexdullred">&quot;q&quot; - <i>quitting the game</i>&nbsp;<a href=Details/62_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></span><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;<span class="indexdullred">quit the game rule</span>&nbsp;&nbsp;<a href="javascript:pasteCode('quit the game rule')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <a href="javascript:pasteCode('The quit the game rule response (carry out quitting the game rulebook) is [=0x0022=]New text.[=0x0022=].')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i></p>
+    <p><p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;(say "Quitting is not allowed in this game."; ...)&nbsp;<a href="source:story.ni#line170"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;<span class="indexdullred">quit the game rule</span>&nbsp;&nbsp;<a href="javascript:pasteCode('quit the game rule')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>name</i> <a href="javascript:pasteCode('The quit the game rule response (carry out quitting the game rulebook) is [=0x0022=]New text.[=0x0022=].')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;<i>unlist</i></p>
     </p>
 
     <!--CONTENT ENDS-->
